Fixed Home page and make it responsive

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,9 @@
       integrity="sha384-iKbFRxucmOHIcpWdX9NTZ5WETOPm0Goy0WmfyNcl52qSYtc2Buk0NCe6jU1sWWNB"
       crossorigin="anonymous"
     />
-
+    <!-- Add jQuery before other scripts that depend on it -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>
